Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectField.quorum
class Main
    Object v
    undefined t = 
    action Main
        Test(v)
    end

    action Test(undefined var)
    end
end
